RESOLVED FIXED177108
[Win] Compile error in InbandTextTrackPrivateAVCF::readNativeSampleBuffer.
https://bugs.webkit.org/show_bug.cgi?id=177108
Summary [Win] Compile error in InbandTextTrackPrivateAVCF::readNativeSampleBuffer.
Per Arne Vollan
Reported 2017-09-18 16:09:44 PDT
The InbandTextTrackPrivateAVF::m_sampleInputBuffer is used in this method, but it is private.
Attachments
Patch (1.55 KB, patch)
2017-09-18 16:14 PDT, Per Arne Vollan
no flags
Per Arne Vollan
Comment 1 2017-09-18 16:14:46 PDT
Brent Fulgham
Comment 2 2017-09-18 17:24:31 PDT
Comment on attachment 321148 [details] Patch r=me
Per Arne Vollan
Comment 3 2017-09-18 18:26:14 PDT
(In reply to Brent Fulgham from comment #2) > Comment on attachment 321148 [details] > Patch > > r=me Thanks for reviewing!
WebKit Commit Bot
Comment 4 2017-09-18 18:56:37 PDT
Comment on attachment 321148 [details] Patch Clearing flags on attachment: 321148 Committed r222195: <http://trac.webkit.org/changeset/222195>
WebKit Commit Bot
Comment 5 2017-09-18 18:56:39 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2017-09-27 12:22:16 PDT
Note You need to log in before you can comment on or make changes to this bug.