[Win] Compile error in InbandTextTrackPrivateAVCF::readNativeSampleBuffer. https://bugs.webkit.org/show_bug.cgi?id=177108

Reviewed by Brent Fulgham.

The InbandTextTrackPrivateAVF::m_sampleInputBuffer is private and not accessible in this method.

* platform/graphics/avfoundation/InbandTextTrackPrivateAVF.h:


Canonical link: https://commits.webkit.org/193517@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222195 268f45cc-cd09-0410-ab3c-d52691b4dbfc