Source/WebCore/platform/graphics/avfoundation/InbandTextTrackPrivateAVF.h
@@ -86,6 +86,8 @@ protected:
     void processNativeSamples(CFArrayRef, const MediaTime&);
     void removeCompletedCues();
 
+    Vector<char> m_sampleInputBuffer;
+
 private:
 #if !RELEASE_LOG_DISABLED
     const char* logClassName() const final { return "InbandTextTrackPrivateAVF"; }
@@ -96,8 +98,6 @@ private:
 
     Vector<RefPtr<GenericCueData>> m_cues;
     AVFInbandTrackParent* m_owner;
-
-    Vector<char> m_sampleInputBuffer;
 
     enum PendingCueStatus {
         None,
